oscen-macros/tests/ui/down_rate.stderr
error: node undersampling (`/ N`) is not yet supported in v1; only oversampling (`* N`) is implemented
 --> tests/ui/down_rate.rs:7:9
  |
7 |         osc = PolyBlepOscillator::saw(440.0, 0.6) / 2;
  |         ^^^

warning: unused import: `PolyBlepOscillator`
 --> tests/ui/down_rate.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator};
  |                    ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
